--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.3.0",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "7",
