--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "5.1.3",
     "firebase": "^9.3.0",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
